<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dreamtv.app.LoginActivity">


    <View
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/spacing_mlarge">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/spacing_mlarge"
            android:layout_marginTop="@dimen/spacing_large"
            android:src="@drawable/logo" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_middle"
            android:visibility="visible"
            app:cardCornerRadius="6dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_mlarge">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/spacing_xlarge"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:text="@string/signin"
                    android:textAllCaps="true"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mlarge" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mlarge" />

                <Button
                    android:id="@+id/signin"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:background="@drawable/btn_rounded_primary"
                    android:text="@string/signin"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="New user? "
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/blue_grey_300" />

                    <TextView
                        android:id="@+id/signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:text="Sign Up"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    android:id="@+id/reset_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="Forgot Password ?"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textStyle="bold"
                    android:focusable="true" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_large" />

    </LinearLayout>


    <!--<android.support.design.widget.AppBarLayout-->
    <!--android:id="@+id/appBar"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:theme="@style/AppTheme.AppBarOverlay">-->

    <!--<android.support.v7.widget.Toolbar-->
    <!--android:id="@+id/toolbar"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="?attr/actionBarSize"-->
    <!--android:background="?attr/colorPrimary"-->
    <!--app:popupTheme="@style/AppTheme.PopupOverlay" />-->

    <!--</android.support.design.widget.AppBarLayout>-->

    <!--<RelativeLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="0dp"-->
    <!--android:layout_weight="1">-->

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_centerInParent="true"-->
    <!--android:orientation="vertical"-->
    <!--android:padding="@dimen/spacing_smlarge">-->

    <!--<View-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="@dimen/spacing_xlarge" />-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="@dimen/spacing_middle"-->
    <!--android:layout_marginLeft="@dimen/spacing_medium"-->
    <!--android:layout_marginStart="@dimen/spacing_medium"-->
    <!--android:text="Sign In"-->
    <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"-->
    <!--android:textColor="@color/blue_600"-->
    <!--android:textStyle="bold" />-->

    <!--<View-->
    <!--android:layout_width="40dp"-->
    <!--android:layout_height="4dp"-->
    <!--android:layout_marginLeft="@dimen/spacing_medium"-->
    <!--android:layout_marginStart="@dimen/spacing_medium"-->
    <!--android:background="@color/blue_600" />-->

    <!--<View-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="@dimen/spacing_mxlarge" />-->

    <!--<android.support.v7.widget.CardView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_margin="@dimen/spacing_small"-->
    <!--android:visibility="visible"-->
    <!--app:cardCornerRadius="2dp"-->
    <!--app:cardElevation="1dp">-->

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="vertical"-->
    <!--android:padding="@dimen/spacing_mlarge">-->

    <!--<View-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="@dimen/spacing_xlarge" />-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="EMAIL"-->
    <!--android:textAlignment="center"-->
    <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"-->
    <!--android:textColor="@color/grey_40" />-->

    <!--<android.support.design.widget.TextInputEditText-->
    <!--android:id="@+id/email"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginLeft="-4dp"-->
    <!--android:layout_marginRight="-4dp"-->
    <!--android:inputType="text"-->
    <!--android:maxLength="50"-->
    <!--android:maxLines="1"-->
    <!--android:singleLine="true"-->
    <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"-->
    <!--android:textColor="@color/blue_600"-->
    <!--android:textStyle="bold"-->
    <!--android:theme="@style/EditText.Grey" />-->

    <!--<View-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="@dimen/spacing_mlarge" />-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="PASSWORD"-->
    <!--android:textAlignment="center"-->
    <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"-->
    <!--android:textColor="@color/grey_40" />-->

    <!--<android.support.design.widget.TextInputEditText-->
    <!--android:id="@+id/password"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginLeft="-4dp"-->
    <!--android:layout_marginRight="-4dp"-->
    <!--android:inputType="textPassword"-->
    <!--android:maxLength="50"-->
    <!--android:maxLines="1"-->
    <!--android:singleLine="true"-->
    <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"-->
    <!--android:textColor="@color/blue_600"-->
    <!--android:textStyle="bold"-->
    <!--android:theme="@style/EditText.Grey" />-->

    <!--<View-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="@dimen/spacing_middle" />-->

    <!--&lt;!&ndash;<android.support.v7.widget.AppCompatCheckBox&ndash;&gt;-->
    <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
    <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
    <!--&lt;!&ndash;android:layout_marginLeft="-4dp"&ndash;&gt;-->
    <!--&lt;!&ndash;android:layout_marginRight="-4dp"&ndash;&gt;-->
    <!--&lt;!&ndash;android:layout_marginTop="@dimen/spacing_middle"&ndash;&gt;-->
    <!--&lt;!&ndash;android:text="Keep me Signed in"&ndash;&gt;-->
    <!--&lt;!&ndash;android:textColor="@color/blue_600"&ndash;&gt;-->
    <!--&lt;!&ndash;android:textStyle="bold"&ndash;&gt;-->
    <!--&lt;!&ndash;android:theme="@style/Checkbox.Blue" />&ndash;&gt;-->

    <!--<View-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="@dimen/spacing_middle" />-->


    <!--<LinearLayout-->
    <!--android:layout_marginTop="@dimen/spacing_medium"-->
    <!--android:orientation="horizontal"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->

    <!--<TextView-->
    <!--android:id="@+id/forgot_password"-->
    <!--android:layout_weight="1"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="right|end"-->
    <!--android:clickable="true"-->
    <!--android:text="Forgot Password ?"-->
    <!--android:textAlignment="center"-->
    <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"-->
    <!--android:textColor="@color/grey_20"-->
    <!--android:textStyle="bold"-->
    <!--android:focusable="true" />-->

    <!--<TextView-->
    <!--android:id="@+id/signup"-->
    <!--android:layout_weight="1"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="right|end"-->
    <!--android:clickable="true"-->
    <!--android:text="Create Account ?"-->
    <!--android:textAlignment="center"-->
    <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"-->
    <!--android:textColor="@color/grey_20"-->
    <!--android:textStyle="bold"-->
    <!--android:focusable="true" />-->

    <!--</LinearLayout>-->

    <!--&lt;!&ndash;<TextView&ndash;&gt;-->
    <!--&lt;!&ndash;android:id="@+id/forgot_password"&ndash;&gt;-->
    <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
    <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
    <!--&lt;!&ndash;android:layout_gravity="right|end"&ndash;&gt;-->
    <!--&lt;!&ndash;android:layout_marginTop="@dimen/spacing_medium"&ndash;&gt;-->
    <!--&lt;!&ndash;android:clickable="true"&ndash;&gt;-->
    <!--&lt;!&ndash;android:text="Forgot Password ?"&ndash;&gt;-->
    <!--&lt;!&ndash;android:textAlignment="center"&ndash;&gt;-->
    <!--&lt;!&ndash;android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"&ndash;&gt;-->
    <!--&lt;!&ndash;android:textColor="@color/grey_20"&ndash;&gt;-->
    <!--&lt;!&ndash;android:textStyle="bold" />&ndash;&gt;-->

    <!--</LinearLayout>-->
    <!--</android.support.v7.widget.CardView>-->

    <!--<View-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="@dimen/spacing_large" />-->

    <!--</LinearLayout>-->

    <!--</RelativeLayout>-->

    <!--<com.balysv.materialripple.MaterialRippleLayout-->
    <!--style="@style/RippleStyleWhite"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="?attr/actionBarSize"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:background="@color/blue_600">-->

    <!--<TextView-->
    <!--android:id="@+id/signin"-->
    <!--android:clickable="true"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"-->
    <!--android:text="SIGN IN"-->
    <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"-->
    <!--android:textColor="@android:color/white"-->
    <!--android:focusable="true" />-->
    <!--</com.balysv.materialripple.MaterialRippleLayout>-->

</RelativeLayout>